--- a/views/templates/views/about.hbs
+++ b/views/templates/views/about.hbs
@@ -46,7 +46,7 @@
         <p>Skåne Lag is part of a worldwide living-history organisation called Jomsborg. The name Jomsborg derives from the legendary warband Jomsvikings. 
           These mythological warriors once made up a brotherhood spanning across the Baltic Sea and Scandinavia in the 
           late Viking age. They are belived to have had their stronghold on the island of Wolin in today’s Poland and figure in both archaeological 
-          and historical sources. The modern Jomsborg was founded in 1988 and today it includes over 40 lags (groups) with more than an thousand members. 
+          and historical sources. The modern Jomsborg was founded in 1988 and today it includes over 40 lags (groups) with more than a thousand members. 
           Jomsborg is divided into five Storms spread all across the world, where Skåne Lag is part of West Storm. 
           In true Viking spirit Jomsborg is lead by an elected Jarl. As with Skåne Lag the whole of 
           Jomsborg aims to recreate Viking Age culture in an authentic way where everyone is welcome. Read more at the Jomsborg website. 
