--- a/views/templates/views/start.hbs
+++ b/views/templates/views/start.hbs
@@ -14,7 +14,7 @@
         <h2>Reenactment</h2>
         <img src="./img/viking-icon.svg"/>
         <h3>Vikings</h3>
-        <p>For more then a thousand years the Vikings has fascinated us with their heroic deeds and travels. 
+        <p>For more than a thousand years the Vikings have fascinated us with their heroic deeds and travels. 
           Their heritage is constantly precent and they still influence our modern world all around the globe. Welcome to 
           embark upon a journey leading you through history to the end of the Iron Age. We are an reenactment group striving to 
           recreate the everyday lives of the remarkable men and women who lived more than a thousand years ago. Whether it is through 
