--- a/views/templates/views/vikings.hbs
+++ b/views/templates/views/vikings.hbs
@@ -61,6 +61,11 @@
             <h2>Fredrik André-Jönsson</h2>
           </div>
 
+          <div>
+            <img src="./img/karin.jpg"/>
+            <h2>Karin Bolting</h2>
+          </div>
+
         </div>
 
         <div class="column">
@@ -107,6 +112,11 @@
            <div>
             <img src="./img/bertil.jpg"/>
             <h2>Bertil Fägerskjöld Sällström </h2>
+          </div>
+
+          <div>
+            <img src="./img/sofia.jpg"/>
+            <h2>Sofia Pettersson </h2>
           </div>
           
         </div>
@@ -156,6 +166,16 @@
           <div>
             <img src="./img/theo.jpg"/>
             <h2>Theo Broman</h2>
+          </div>
+
+          <div>
+            <img src="./img/jenny.jpg"/>
+            <h2>Jenny Månsson</h2>
+          </div>
+          
+          <div>
+            <img src="./img/marina.jpg"/>
+            <h2>Marina Nilsson</h2>
           </div>
         </div>
         
