Add new people and update link

--- a/views/templates/views/about.hbs
+++ b/views/templates/views/about.hbs
@@ -53,7 +53,7 @@
         </p>
         {{> button 
           text='To Jomsborg' 
-          link="http://www.jomsborg.com" 
+          link="http://www.jomsborg.co.uk" 
         }}
       </div>
     </section>
