--- a/views/templates/views/vikings.hbs
+++ b/views/templates/views/vikings.hbs
@@ -66,6 +66,11 @@
             <h2>Karin Bolting</h2>
           </div>
 
+          <div>
+            <img src="./img/stefan.jpg"/>
+            <h2>Stefan Mundilfare</h2>
+          </div>
+
         </div>
 
         <div class="column">
@@ -117,6 +122,11 @@
           <div>
             <img src="./img/sofia.jpg"/>
             <h2>Sofia Pettersson </h2>
+          </div>
+
+          <div>
+            <img src="./img/sofia.jpg"/>
+            <h2>Petra Karnebäck </h2>
           </div>
           
         </div>
