--- a/views/templates/views/vikings.hbs
+++ b/views/templates/views/vikings.hbs
@@ -125,7 +125,7 @@
           </div>
 
           <div>
-            <img src="./img/sofia.jpg"/>
+            <img src="./img/petra.jpg"/>
             <h2>Petra Karnebäck </h2>
           </div>
           
