New images and update members

--- a/views/less/views/about.less
+++ b/views/less/views/about.less
@@ -20,7 +20,7 @@
   }
 
   .training-section {
-    .text-and-image-section('left', '../img/training.png');
+    .text-and-image-section('left', '../img/new_traning.jpg');
   }
 
   .image-slide-section {
@@ -34,7 +34,6 @@
 
   .contact-us-section {
     background-color: @dark-dark;
-
     .content {
       padding: 0 1.5rem;
       margin: 0;
