--- a/views/templates/views/about.hbs
+++ b/views/templates/views/about.hbs
@@ -130,6 +130,14 @@
             </div>
             <p>Leia Morrison (photo)</p>
           </li>
+          <li>
+            <a href="https://www.facebook.com/mardklint">
+              <div>
+                <div class="icon" style="background-image:url('./img/richard.jpg')"></div>
+              </div>
+              <p>Richard Mårdklint (photo)</p>
+            </a>
+          </li>
         </ul>
       </div>
     </section>
