--- a/views/templates/views/vikings.hbs
+++ b/views/templates/views/vikings.hbs
@@ -43,7 +43,7 @@
 
           <div>
             <img src="./img/jacob.jpg"/>
-            <h2>Jacob Pettersson</h2>
+            <h2>Jacob Hoff</h2>
           </div>
 
           <div>
@@ -66,11 +66,6 @@
             <h2>Karin Bolting</h2>
           </div>
 
-          <div>
-            <img src="./img/stefan.jpg"/>
-            <h2>Stefan Mundilfare</h2>
-          </div>
-
         </div>
 
         <div class="column">
@@ -89,19 +84,19 @@
             <h2>Rikke Riber Jensen</h2>
           </div>
 
-          <div>
+          <!--<div>
             <img src="./img/josef.jpg"/>
             <h2>Josef Ahlström</h2>
-          </div>
+          </div>-->
 
           <div>
             <img src="./img/victor.jpg"/>
             <h2>Victor Kaupe </h2>
           </div>
-
+          
           <div>
-            <img src="./img/jessica.jpg"/>
-            <h2>Jessica Forsberg</h2>
+            <img src="./img/joachim.jpg"/>
+            <h2>Joakim Holdeberg</h2>
           </div>
 
           <div>
@@ -159,13 +154,8 @@
           </div>
 
           <div>
-            <img src="./img/joachim.jpg"/>
-            <h2>Joakim Holdeberg</h2>
-          </div>
-
-          <div>
-            <img src="./img/helen.jpg"/>
-            <h2>Helen Servin</h2>
+            <img src="./img/jessica.jpg"/>
+            <h2>Jessica Forsberg</h2>
           </div>
 
           <div>
@@ -186,6 +176,11 @@
           <div>
             <img src="./img/marina.jpg"/>
             <h2>Marina Nilsson</h2>
+          </div>
+
+          <div>
+            <img src="./img/stefan.jpg"/>
+            <h2>Stefan Mundilfare</h2>
           </div>
         </div>
         
