--- a/views/less/main.less
+++ b/views/less/main.less
@@ -5,6 +5,7 @@
 @import "views/hire-us";
 @import "views/about";
 @import "views/vikings";
+@import "views/join";
 @import "views/404";
 
 /* Components */
