Add new content

--- a/views/less/views/about.less
+++ b/views/less/views/about.less
@@ -14,17 +14,13 @@
     }
   }
 
-  .jomsborg-section {
+  .info-section {
     min-height: 100vh;
     .text-section();
   }
 
-  .training-section {
-    .text-and-image-section('left', '../img/new_traning.jpg');
-  }
-
-  .image-slide-section {
-    .image-section();
+  .jomsborg-section {
+    .text-and-image-section('left', '../img/jomsborg-30.jpg');
   }
 
   .thanks-section {
