--- a/views/templates/components/menu.hbs
+++ b/views/templates/components/menu.hbs
@@ -6,6 +6,7 @@
         <li><a href="./index.html">Start</a></li>
         <li><a href="./reenactment.html">Reenactment</a></li>
         <li><a href="./hire-us.html">Hire Us</a></li>
+        <li><a href="./join-us.html">Join Us</a></li>
       </ul>
     </nav>
   </div>
