--- a/views/templates/views/about.hbs
+++ b/views/templates/views/about.hbs
@@ -9,7 +9,7 @@
       </div>
     </section>
 
-    <section class="jomsborg-section">
+    <section class="info-section">
       <div class="content">
         <h2>Based in Malmö</h2>
         <img src="./img/viking-icon.svg"/>
@@ -24,51 +24,19 @@
       </div>
     </section>
 
-    <section class="training-section">
-      <div class="content">
-        <h2>Training</h2>
-        <h3>How to get started</h3>
-        <p>A huge part of Skåne Lag's focus is the historically inspired competitive fighting. This is a full body contact 
-          sport with blunted steal weapons. Everyone is welcome to join the weekly practice, regardless of prior experiences. As a beginner you 
-          train together with an instructor in order to learn the basics before practicing with the whole group. Skåne Lag has a 
-          useful mentor system where everyone who want can choose a more experienced fighter to get extra help from. Together we 
-          aim to have a safe and fun atmosphere in the training hall. We train Tusedays 19.00-21.00 in Malmö, 
-          contact us if your're interested. 
-        </p>
-      </div>
-    </section>
-
     <section class="jomsborg-section">
       <div class="content">
-        <h2>Part of Jomsborg</h2>
-        <img src="./img/viking-icon.svg"/>
-        <h3>Jomsborg</h3>
+        <h2>Jomsborg</h2>
+        <h3>A worldwide organisation</h3>
         <p>Skåne Lag is part of a worldwide living-history organisation called Jomsborg. The name Jomsborg derives from the legendary warband Jomsvikings. 
           These mythological warriors once made up a brotherhood spanning across the Baltic Sea and Scandinavia in the 
           late Viking age. They are belived to have had their stronghold on the island of Wolin in today’s Poland and figure in both archaeological 
           and historical sources. The modern Jomsborg was founded in 1988 and today it includes over 40 lags (groups) with more than a thousand members. 
           Jomsborg is divided into five Storms spread all across the world, where Skåne Lag is part of West Storm. 
           In true Viking spirit Jomsborg is lead by an elected Jarl. As with Skåne Lag the whole of 
-          Jomsborg aims to recreate Viking Age culture in an authentic way where everyone is welcome. Read more at the Jomsborg website. 
+          Jomsborg aims to recreate Viking Age culture in an authentic way where everyone is welcome. Read more at the Jomsborg website: <a href="www.jomsborg.co.uk">jomsborg.co.uk</a>. 
         </p>
-        {{> button 
-          text='To Jomsborg' 
-          link="http://www.jomsborg.co.uk" 
-        }}
       </div>
-    </section>
-
-    <section class="image-slide-section">
-      {{>image-slider
-        images= '{
-        "images":[
-          { 
-            "url": "./img/jomsborg-30.jpg", 
-            "heading":"Feed the flame",
-            "text": "All of Jomsborg at the 30th anniversary of the organisation."
-          }
-        ]}'
-      }}
     </section>
 
     <section class="thanks-section">
