--- a/views/templates/views/start.hbs
+++ b/views/templates/views/start.hbs
@@ -45,7 +45,7 @@
         <h2>Become a viking</h2>
         {{> button 
           text='Learn More' 
-          link="./reenactment.html" 
+          link="./join-us.html" 
         }}
       </div>
     </section>
