--- a/views/templates/components/head.hbs
+++ b/views/templates/components/head.hbs
@@ -27,4 +27,5 @@
   <meta property="og:description" content="The Vikings are coming! For more then a thousand years the Vikings has fascinated us with their heroic deeds 
   and mythical travels. Welcome to embark upon a journey leading you through history to the end of the Iron Age." />
   <meta property="og:image" content="./img/fb-cover.png" />
+  <meta name="google-site-verification" content="l0X7t-0wHlLdYutlNAc5Hf-KvvIgmVLPYjDFZS-aOMU" />
 </head>
